@@ -1,5 +1,6 @@
 Revision history for App-FatPacker
 
+  - don't fail packlist finding if one module fails to load
   - don't fail tracing w/undef INC values due to failed optional module load
 
 0.010_006 - 2017-01-20
